--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --background-primary: #ffffff;
+  --color-prymary: #E5E5E5;
+}
+
+body{
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: var(--background-primary);
+  font-family: 'Open Sans', sans-serif;
+}
